# f2f

./: .gitignore  .prettierignore  FILE_STRUCTURE.md  PROGRESS_UPDATE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  check-size.ps1  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md  create-ico.ps1  create-icon.ps1  icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: adapter.rs  detector.rs  mod.rs  pipeline.rs  planner.rs  quality.rs  registry.rs  storage.rs
src-tauri/src/types/: capability.rs  conversion.rs  job.rs  mod.rs
src/components/: FileDropzone.tsx
src/components/layouts/: MainLayout.tsx  Sidebar.tsx
src/lib/: tauri.ts
src/pages/Plugins/: index.tsx
src/pages/Preview/: index.tsx
src/pages/Queue/: index.tsx
src/pages/QuickConvert/: index.tsx
src/pages/RecipeBuilder/: index.tsx
src/pages/Settings/: index.tsx
src/router/: index.tsx
src/styles/: index.css
src/types/: ipc.ts
