[package]
name = "f2f-converter"
version = "0.1.0"
description = "一体化多格式互转桌面软件"
authors = ["F2F Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.20"
dashmap = "6.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
sha2 = "0.10"
hex = "0.4"
infer = "0.16"

# Async runtime
futures = "0.3"
async-trait = "0.1"

# SQLite for task metadata
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# File system operations
walkdir = "2.5"
tempfile = "3.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
